<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_reading"
            android:textSize="20sp"
            android:layout_marginTop="50dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/etMeterReading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/grey_squared_rounded_bg"
            android:layout_marginTop="50dp"
            android:padding="10dp"
            android:hint="@string/enter_reading"/>


        <EditText
            android:id="@+id/etDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/grey_squared_rounded_bg"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:hint="@string/select_date"/>

        <EditText
            android:id="@+id/etUnitCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/grey_squared_rounded_bg"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:hint="@string/Total_unit_today"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btAddMeterUnits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_reading"
            android:layout_marginTop="40dp"
            android:textColor="@color/white"
            android:background="@drawable/blue_squared_rounded_bg"
            android:textAllCaps="true"
            android:padding="10dp"
            />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>